--- a/ExpandingCards/style.css
+++ b/ExpandingCards/style.css
@@ -21,20 +21,20 @@ body{
   flex: 0.5;
   margin: 10px;
   position: relative;
-  /* -webkit-transition: all 700ms ease-in; */
+  -webkit-transition: all 700ms ease-in;
 }
 .panel h3{
   font-size: 24px;
   position: absolute;
-  bottom: 20;
-  left: 20;
+  bottom: 20px;
+  left: 20px;
   margin: 0;
   opacity: 0;
 }
 .panel.active{
   flex: 5;
 }
-.panel.active h3¨{
+.panel.active h3{
   opacity: 1;
   transition: opacity 0.3s ease-in 0.4s;
 }
