--- a/HiddenSearch/style.css
+++ b/HiddenSearch/style.css
@@ -27,3 +27,9 @@ transition: transform 0.3s ease;
 .input:focus{
   outline: none;
 }
+.search.active .input{
+  width: 200px;
+}
+.search.active .btn{
+  transform: translateX(198px);
+}
